Fix overflow issue for entity dropdown.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,7 +130,6 @@ hr.dropdown-separator {
   border: 1px solid #bbb;
   background-color: #777;
   margin: 10px;
-  overflow: hidden;
   position: relative;
 }
 
